add silkscreen font

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       content="A Mozilla Location Services visualization using WebGL Globe."
     />
     <link rel="stylesheet" href="./src/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="w-screen h-screen" id="container"></div>
@@ -29,7 +35,7 @@
           >
           framework—an open-source project by Google.
         </p>
-        <p class="text-sm mb-3">Last data update: <code>Feb 20, 2020</code></p>
+        <p class="text-sm mb-3">Last data update: 2020/2/20</p>
       </div>
     </div>
 
